docs: add required body in swagger
